--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "morgan": "^1.9.1",
     "multer": "^1.4.2",
     "passport": "^0.4.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "utf8": "^3.0.0"
   },
   "devDependencies": {
     "nodemon": "^1.19.1"
