Added one folder to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@ src/public/img/daria-nepriakhina-zcDkupAH4wc-unsplash.jpg
 src/public/img/dmitry-ratushny-LTOK9sICyao-unsplash.jpg
 src/public/img/jamie-fenn-u0P5qYyx-2s-unsplash.jpg
 src/public/img/nathan-anderson-xqJ-4-E5Rs4-unsplash.jpg
+src/public/2020
+src/public/2020/
